Points: Add modal for tallying points gained at the end of a game

--- a/css/spni.css
+++ b/css/spni.css
@@ -3338,6 +3338,35 @@ label {
 }
 
 /************************************************************
+ * Classes for the Points modal.
+ ************************************************************/
+
+#points-modal .modal-body-container > p {
+    margin-bottom: 0.5rem;
+}
+
+#points-modal-divider {
+    display: flex;
+}
+
+#points-modal-table {
+    flex: 2;
+    margin-right: 1.5rem;
+}
+
+#points-modal-explanation {
+    flex: 1;
+}
+
+.point-intent-row {
+    background-color: rgb(200, 200, 200);
+}
+
+.point-intent-total {
+    font-weight: bold;
+}
+
+/************************************************************
  * Classes for the Epilogue screens.
  ************************************************************/
 
