--- a/css/spni.css
+++ b/css/spni.css
@@ -1883,6 +1883,10 @@ label {
     cursor: pointer;
 }
 
+.selection-card[data-highlight="new"] {
+    background-color: rgba(25, 166, 25, 0.75);
+}
+
 .selection-card-image-clip {
     position: absolute;
     top: 0;
@@ -2004,6 +2008,11 @@ label {
     background-color: rgba(221, 221, 221, 0.90);
     transition: background-color;
     transition-duration: 0.5s;
+}
+
+.selection-card[data-highlight="new"]:hover,
+.selection-card[data-highlight="new"]:active {
+    background-color: rgba(102, 255, 102, 0.90);
 }
 
 .selection-card:hover .selection-card-footer .selection-card-label,
