Highlighting: start working on new default suggestions UI

--- a/css/spni.css
+++ b/css/spni.css
@@ -315,13 +315,6 @@ label {
     background-color: rgba(169, 68, 66, 0.75);
 }
 
-.select-slot-button {
-    width: 100%;
-    height: 5.44rem;
-    /* To match small-card-image */
-    font-size: 130%;
-}
-
 .game-menu-dropup {
     position: absolute;
     left: 1%;
@@ -1845,6 +1838,33 @@ label {
     height: 11%;
     left: 1%;
     width: 98%;
+}
+
+.select-slot-button {
+    width: 100%;
+    height: 5.44rem;
+    /* To match small-card-image */
+    font-size: 130%;
+}
+
+.select-slot-button.suggestion-shown {
+    height: 4.5rem;
+}
+
+.prefill-select-button {
+    width: 100%;
+    height: 4rem;
+    font-size: 130%;
+    margin-bottom: 0.2rem;
+}
+
+.prefill-suggestion {
+    opacity: 0.6;
+}
+
+.suggestion-label::before {
+    font-weight: bold;
+    content: "Suggested: ";
 }
 
 /************************************************************
