Highlighting: add badges for new characters and for alt costumes
Thanks to CorkyTheCactus, we now have shiny new icons for denoting
characters that are new and that have alternate costumes, similiarly to
how epilogues are denoted on the select screens.

To accomodate this, the layout of badges on the group select screen and
on opponent selection cards has been changed to a dynamic flexbox-based
layout, instead of using absolute positioning. This should ensure that
badges stack properly without having to play around with positioning
values.

--- a/css/spni.css
+++ b/css/spni.css
@@ -1955,17 +1955,6 @@ label {
     align-items: center;
 }
 
-.badge-icon {
-    opacity: 0.75;
-
-    height: 18%;
-    width: auto;
-
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
 .selection-card-sidebar img {
     width: 100%;
     height: auto;
@@ -1984,6 +1973,28 @@ label {
 .selection-card-sidebar .status-icon {
     opacity: 0.50;
     margin-top: 3%;
+}
+
+.badge-sidebar {
+    position: absolute;
+
+    left: 0;
+    top: 0;
+    width: 40%;
+
+    padding: 2% 2.5%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.badge-sidebar .badge-icon {
+    opacity: 0.75;
+    width: 100%;
+    height: auto;
+    position: static;
 }
 
 .selection-card-footer {
@@ -2683,13 +2694,23 @@ label {
     line-height: 3rem;
 }
 
-.badge-icon {
+.group-badge-bar {
     position: absolute;
     width: 36%;
-    height: auto;
     left: 0;
     top: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.group-badge-bar .badge-icon {
     opacity: 0.75;
+
+    width: 100%;
+    height: auto;
 }
 
 .status-icon {
