--- a/css/spni.css
+++ b/css/spni.css
@@ -1867,6 +1867,25 @@ label {
     content: "Suggested: ";
 }
 
+.selection-badge-row {
+    position: absolute;
+    top: 8%;
+    height: 8rem;
+    width: 24.5%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.selection-badge-row .badge-icon {
+    opacity: 0.75;
+
+    height: 100%;
+    width: auto;
+}
+
 /************************************************************
  * Classes for the new individual select screen.
  ************************************************************/
