Highlighting: remove green background from new character cards
Now that we have badges for new characters, we shouldn't need the green
background highlighting. That said, it'll still be around as a neat
hover effect.

(Also adds a similar coloring-on-hover effect for Testing characters,
though that effect will only ever be visible in the offline version.)

--- a/css/spni.css
+++ b/css/spni.css
@@ -1922,9 +1922,11 @@ label {
     cursor: pointer;
 }
 
+/*
 .selection-card[data-highlight="new"] {
     background-color: rgba(25, 166, 25, 0.75);
 }
+*/
 
 .selection-card-image-clip {
     position: absolute;
@@ -2062,8 +2064,14 @@ label {
 
 .selection-card[data-highlight="new"]:hover,
 .selection-card[data-highlight="new"]:active {
-    background-color: rgba(102, 255, 102, 0.90);
+    background-color: rgba(102, 255, 102, 0.50);
 }
+
+.selection-card[data-highlight="testing"]:hover,
+.selection-card[data-highlight="testing"]:active {
+    background-color: rgba(92, 197, 250, 0.6);
+}
+
 
 .selection-card:hover .selection-card-footer .selection-card-label,
 .selection-card:active .selection-card-footer .selection-card-label {
