Move the collectible-buttons outside the opponent areas to let them be visible even after the game is over.

--- a/css/spni.css
+++ b/css/spni.css
@@ -4015,18 +4015,19 @@ label {
     background-color: #BB3333;
 }
 
-.collectible-button {
+.collectible-button-container {
     position: absolute;
-    left: 0%;
-    top: -45%;
-    width: 19%;
-    height: 40%;
+    width: 22rem;
+    top: 65%;
+    margin: 0 1.5rem;
+}
 
+.collectible-button {
+    width: 4.5rem;
+    height: 3rem;
+    padding: 0.1rem;
+    position: absolute;
     animation: 2.5s ease-in-out 0s infinite alternate flash-collectible-button;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 @keyframes flash-collectible-button {
@@ -4048,6 +4049,7 @@ label {
 .collectible-button img {
     max-width: 100%;
     max-height: 100%;
+    vertical-align: baseline;
 }
 
 /************************************************************
