Starts the Valentine's Day event!

--- a/css/spni.css
+++ b/css/spni.css
@@ -2072,6 +2072,11 @@ label {
     background-color: rgba(92, 197, 250, 0.6);
 }
 
+.selection-card[data-highlight="valentines"]:hover,
+.selection-card[data-highlight="valentines"]:active {
+    background-color: rgba(255, 103, 126, 0.6);
+}
+
 
 .selection-card:hover .selection-card-footer .selection-card-label,
 .selection-card:active .selection-card-footer .selection-card-label {
