Add debug-only epilogue scene skip button
This adds a small UI widget that allows developers to skip to the start of
any scene within an epilogue.
This option is only shown when Debug Mode is enabled in `config.xml`.

--- a/css/spni.css
+++ b/css/spni.css
@@ -3489,6 +3489,23 @@ label {
     visibility: hidden;
 }
 
+#epilogue-buttons .debug-only:not(.debug-active) {
+    display: none;
+}
+
+#epilogue-skip-group {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 6rem;
+}
+
+#epilogue-skip-group > * {
+    margin-bottom: 0.5rem;
+    width: 100%;
+}
+
 .modal-footer-button-row {
     display: flex;
     align-items: center;
