--- a/css/spni.css
+++ b/css/spni.css
@@ -3489,21 +3489,29 @@ label {
     visibility: hidden;
 }
 
-#epilogue-buttons .debug-only:not(.debug-active) {
+#epilogue-debug-group:not(.debug-active) {
     display: none;
 }
 
-#epilogue-skip-group {
+#epilogue-debug-group {
+    position: absolute;
+    top: 15vh;
+    left: 1rem;
+    z-index: 10001;
+
     display: inline-flex;
     flex-direction: column;
-    align-items: center;
-
-    width: 6rem;
+    align-items: start;
+    justify-content: center;
 }
 
-#epilogue-skip-group > * {
+#epilogue-debug-group > * {
     margin-bottom: 0.5rem;
-    width: 100%;
+    min-width: 6rem;
+}
+
+#epilogue-debug-group > button {
+    padding: 0.5rem;
 }
 
 .modal-footer-button-row {
