--- a/css/spni.css
+++ b/css/spni.css
@@ -269,50 +269,31 @@ label {
     opacity: 1;
 }
 
-.hide-table-button {
-    position: absolute;
-    width: 3.25%;
-    height: 4.50%;
-    left: 48.375%;
-    bottom: 22%;
-    background-color: rgba(155, 155, 155, 0.5);
-}
-
-.hide-table-button:hover {
-    background-color: rgba(155, 155, 155, 0.9);
-}
-
-.hide-table-button:active {
-    background-color: rgba(155, 155, 155, 0.75);
-}
-
+.hide-table-button,
 .table-bug-report-button {
     position: absolute;
     width: 3.25%;
     height: 4.50%;
     left: 48.375%;
-    bottom: 17.4%;
     background-color: rgba(155, 155, 155, 0.5);
 }
 
+.hide-table-button {
+    bottom: 22%;
+}
+
+.table-bug-report-button {
+    bottom: 17.4%;
+}
+
+.hide-table-button:hover,
 .table-bug-report-button:hover {
     background-color: rgba(155, 155, 155, 0.9);
 }
 
+.hide-table-button:active,
 .table-bug-report-button:active {
     background-color: rgba(155, 155, 155, 0.75);
-}
-
-.table-bug-report-button-highlight {
-    background-color: rgba(169, 68, 66, 0.5);
-}
-
-.table-bug-report-button-highlight:hover {
-    background-color: rgba(169, 68, 66, 0.9);
-}
-
-.table-bug-report-button-highlight:active {
-    background-color: rgba(169, 68, 66, 0.75);
 }
 
 .game-menu-dropup {
@@ -1235,13 +1216,6 @@ label {
 
 /* Common title classes and elements: */
 
-.banner-flair {
-    text-align: center;
-    font-size: 110%;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-
 .warning-text {
     position: relative;
     top: 5%;
@@ -1254,59 +1228,6 @@ label {
         0.1rem -0.1rem 0 #000,
         -0.1rem 0.1rem 0 #000,
         0.1rem 0.1rem 0 #000;
-}
-
-.version-button {
-    position: absolute;
-    width: 16.5%;
-    height: 5%;
-    top: 17%;
-    right: 17%;
-    padding-top: 0.35em;
-    line-height: 85%;
-}
-
-.version-button>.substitute-version-time {
-    font-size: 80%;
-    white-space: nowrap;
-}
-
-#title-credits-button {
-    position: absolute;
-    width: 12.5%;
-    height: 3.5%;
-    top: 17.25%;
-    right: 34%;
-    padding-top: 0.15%;
-}
-
-.title-help-button {
-    position: absolute;
-    width: 15.5%;
-    height: 6.5%;
-    top: 17%;
-    right: 1%;
-    padding-top: 0.15%;
-
-    font-size: 150%;
-
-    background: linear-gradient(#f34141, #9F1616);
-    background-color: #f34141;
-}
-
-.title-help-button:hover {
-    background: linear-gradient(#F88888, #BB3333);
-
-    background-color: #F66666;
-}
-
-.title-load-button {
-    position: absolute;
-    padding-top: 0.15%;
-    width: 3.65%;
-    height: 5%;
-    top: 17%;
-    left: 16%;
 }
 
 .title-banner-container {
@@ -1606,25 +1527,22 @@ label {
     padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
-.reddit-button {
-    position: absolute;
-    width: 3.65%;
-    height: 5%;
-    left: 11.75%;
+.banner-flair {
+    text-align: center;
+    font-size: 110%;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     top: 17%;
-}
-
-.reddit-logo {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    padding-top: 0.25%;
+    height: 5%;
+    width: 3.65%;
 }
 
 .title-settings-button {
-    position: absolute;
     width: 6%;
     height: 7%;
     left: 1%;
-    top: 17%;
 }
 
 .title-settings-button>span {
@@ -1632,11 +1550,53 @@ label {
 }
 
 .title-bug-report-button {
-    position: absolute;
-    width: 3.65%;
-    height: 5%;
     left: 7.5%;
-    top: 17%;
+}
+
+.reddit-button {
+    left: 11.75%;
+}
+
+.reddit-logo {
+    width: 100%;
+    height: 100%;
+}
+
+.title-load-button {
+    left: 16%;
+}
+
+.title-fullscreen-button {
+    left: 20.25%;
+}
+
+.version-button {
+    width: 16.5%;
+    right: 17%;
+    padding-top: 0.35em;
+    line-height: 85%;
+}
+
+.version-button>.substitute-version-time {
+    font-size: 80%;
+    white-space: nowrap;
+}
+
+.title-help-button {
+    width: 15.5%;
+    height: 6.5%;
+    right: 1%;
+
+    font-size: 150%;
+
+    background: linear-gradient(#f34141, #9F1616);
+    background-color: #f34141;
+}
+
+.title-help-button:hover {
+    background: linear-gradient(#F88888, #BB3333);
+
+    background-color: #F66666;
 }
 
 #left-title-candy {
@@ -2717,7 +2677,7 @@ label {
 }
 
 .group-dock-button-row .hide-table-button,
-.group-dock-button-row .group-bug-report-button {
+.group-dock-button-row .table-bug-report-button {
     position: static;
     display: inline-block;
 
