Add fullscreen buttons.

--- a/css/spni.css
+++ b/css/spni.css
@@ -161,6 +161,7 @@ label {
 #game-table>*,
 #game-hidden-area>*,
 .table-bug-report-button,
+.table-fullscreen-button,
 .hide-table-button {
     z-index: 1000;
 }
@@ -269,6 +270,7 @@ label {
     opacity: 1;
 }
 
+.table-fullscreen-button,
 .hide-table-button,
 .table-bug-report-button {
     position: absolute;
@@ -276,6 +278,10 @@ label {
     height: 4.50%;
     left: 48.375%;
     background-color: rgba(155, 155, 155, 0.5);
+}
+
+.table-fullscreen-button {
+    bottom: 26.6%;
 }
 
 .hide-table-button {
@@ -286,11 +292,13 @@ label {
     bottom: 17.4%;
 }
 
+.table-fullscreen-button:hover,
 .hide-table-button:hover,
 .table-bug-report-button:hover {
     background-color: rgba(155, 155, 155, 0.9);
 }
 
+.table-fullscreen-button:active,
 .hide-table-button:active,
 .table-bug-report-button:active {
     background-color: rgba(155, 155, 155, 0.75);
@@ -2676,6 +2684,7 @@ label {
     margin-bottom: 0.5rem;
 }
 
+.group-dock-button-row .table-fullscreen-button,
 .group-dock-button-row .hide-table-button,
 .group-dock-button-row .table-bug-report-button {
     position: static;
