--- a/css/spni.css
+++ b/css/spni.css
@@ -96,8 +96,17 @@ label {
     font-weight: 500;
 }
 
+.glyphicon {
+    top: 0.1rem;
+}
+
 .tooltip {
     font-size: 1.2rem;
+}
+.tooltip-inner {
+    border-radius: 0.4rem;
+    padding: 0.3rem 0.8rem;
+    max-width: 20rem;
 }
 
 .form-control {
@@ -255,19 +264,6 @@ label {
 .smooth-button:active:not(:disabled) {
     padding-left: 0.15em;
     padding-right: 0.05em;
-}
-
-.center-dock-button {
-    position: absolute;
-    height: 50px;
-    width: 100px;
-    top: 26%;
-    left: 0px;
-    right: 0px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    font-size: 20px;
-    opacity: 1;
 }
 
 .table-fullscreen-button,
@@ -2935,45 +2931,6 @@ label {
  * Classes for the human player section of the table on the
  * main game screen.
  ************************************************************/
-
-/*
-#game-home-button {
-    position: absolute;
-    left: 1.5%;
-    bottom: 7.5%;
-}
-
-#game-settings-button {
-    position: absolute;
-    left: 1.5%;
-    bottom: 2%;
-}
-
-#game-log-button {
-    position: absolute;
-    left: 1.5%;
-    bottom: 13%;
-}
-*/
-
-.dock-options-button {
-    width: 4%;
-    height: 5%;
-    background-color: rgba(192, 51, 51, 0.5);
-}
-
-.dock-options-button:hover {
-    background-color: rgba(192, 51, 51, 0.9);
-}
-
-.dock-options-button:active {
-    background-color: rgba(192, 51, 51, 0.75);
-}
-
-.dock-options-button span {
-    margin-right: 0.1rem;
-    margin-bottom: 0.2rem;
-}
 
 .small-clothing-image {
     width: 28%;
