Try specifying the game menu font size in pixels as a way to let it be bigger on small screens.
(Unfortunately the behaviour differs between browsers.)

Also avoid big gaps by not setting line-height, which I don't think is necessary, and let the borders overlap.

Move the deck first in the #hidden-area so that it doesn't overlap the menu.

--- a/css/spni.css
+++ b/css/spni.css
@@ -311,10 +311,25 @@ label {
 }
 
 .dropdown-menu {
-    background: none;
     padding-top: 0px;
     padding-bottom: 0px;
-    width: 300%;
+}
+.game-menu-dropup .dropdown-menu {
+    background: transparent;
+    border: 0px none;
+    width: 15em;
+    font-size: 1.4rem;
+    min-width: unset;
+}
+@media (min-resolution: 120dpi) {
+    .game-menu-dropup .dropdown-menu {
+        font-size: 18px;
+    }
+}
+ul.dropdown-menu>li {
+    margin: 0;
+    margin-top: -0.2rem;
+    padding: 0;
 }
 
 .dropdown-button-item span {
@@ -324,8 +339,6 @@ label {
 
 .dropdown-button-item {
     width: 100%;
-    font-size: 1.4rem;
-    line-height: 1.30em;
 
     display: inline-flex;
     justify-content: flex-start;
