--- a/css/spni.css
+++ b/css/spni.css
@@ -7,6 +7,7 @@ html {
     width: 100%;
     height: 100%;
     font-size: 10px;
+    touch-action: manipulation;
 }
 
 body {
@@ -24,8 +25,10 @@ body {
 
 button,
 input,
+textarea,
 select {
     pointer-events: auto;
+    touch-action: none;
 }
 
 button>* {
@@ -1243,6 +1246,7 @@ ul.dropdown-menu>li {
     position: absolute;
     width: 100%;
     top: 4%;
+    pointer-events: none;
 }
 
 .title-banner-area {
