--- a/css/spni.css
+++ b/css/spni.css
@@ -3428,6 +3428,17 @@ ul.dropdown-menu>li {
     display: none;
 }
 
+#epilogue-fullscreen-button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 1rem;
+    z-index: 10001;
+    padding: 0.3em;
+    padding-bottom: 0.1em;
+    font-size: 1.2em;
+}
+
 #epilogue-debug-group {
     position: absolute;
     top: 15vh;
