Simplify and tidy up keyboard handling and epilogue event handling and buttons.
keyup handlers per screen are stored using .data() and activated/deactivated by screenTransition().

Epilogues can now be advanced with the spacebar or right arrow key and backed up through with the left arrow key.

epilogueContainer.dataset is no longer used.

--- a/css/spni.css
+++ b/css/spni.css
@@ -3476,9 +3476,14 @@ label {
     z-index: 10001;
 }
 
-#epilogue-buttons>button {
+#epilogue-buttons button {
     display: block;
-    margin: 1rem;
+    margin: 0.5rem;
+    padding: 0.3rem 0.5rem;
+}
+#epilogue-buttons select {
+    display: block;
+    margin: 0.5rem;
 }
 
 #epilogue-buttons>button:disabled {
@@ -3487,31 +3492,6 @@ label {
 
 #epilogue-buttons>#epilogue-restart:disabled {
     visibility: hidden;
-}
-
-#epilogue-debug-group:not(.debug-active) {
-    display: none;
-}
-
-#epilogue-debug-group {
-    position: absolute;
-    top: 15vh;
-    left: 1rem;
-    z-index: 10001;
-
-    display: inline-flex;
-    flex-direction: column;
-    align-items: start;
-    justify-content: center;
-}
-
-#epilogue-debug-group > * {
-    margin-bottom: 0.5rem;
-    min-width: 6rem;
-}
-
-#epilogue-debug-group > button {
-    padding: 0.5rem;
 }
 
 .modal-footer-button-row {
