--- a/css/spni.css
+++ b/css/spni.css
@@ -3394,7 +3394,7 @@ ul.dropdown-menu>li {
 .epilogue-content .dialogue-bubble {
     padding: 0.9rem;
     margin: 0;
-    font-size: 100%;
+    font-size: 107%;
     border-radius: 0.7rem;
 }
 
@@ -3408,11 +3408,12 @@ ul.dropdown-menu>li {
     left: 0;
     z-index: 10001;
     width: 100%;
-    height: 2em;
+    height: 2.3em;
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
     opacity: 0;
     transition-property: opacity;
     transition-duration: 0.2s;
+    font-size: 30px; /* default; overridden by resizeViewport() */
 }
 #epilogue-buttons:not(.debug-active) .debug {
     display: none;
@@ -3422,10 +3423,10 @@ ul.dropdown-menu>li {
     bottom: 0;
 }
 #epilogue-buttons>div:first-child {
-    left: 1em;
+    left: 0.75em;
 }
 #epilogue-buttons>div:last-child {
-    right: 1em;
+    right: 0.75em;
 }
 #epilogue-buttons.show, #epilogue-buttons.force-show, #epilogue-buttons.debug-active {
     opacity: 1;
