Prevent players from entering before all characters are loaded
Adds a small loading meter that ensures players don't progress
to the title screen before all character metadata is loaded.

Trying to enter the select screens or the Gallery before all
characters are loaded tends to lead to issues, such as empty
gallery views and empty selection screens.

It's easier to prevent players from progressing to the title
screen entirely, than to make sure that players can't move
to the gallery and selection screens separately from the
title screen before everything is ready.

--- a/css/spni.css
+++ b/css/spni.css
@@ -1297,6 +1297,27 @@ ul.dropdown-menu>li {
     margin-top: 10%;
 }
 
+#warning-load-container {
+    font-size: 4rem;
+    text-shadow:
+        -0.1rem -0.1rem 0 #000,
+        0.1rem -0.1rem 0 #000,
+        -0.1rem 0.1rem 0 #000,
+        0.1rem 0.1rem 0 #000;
+}
+
+.game-load-label {
+    color: #F0F0F0;
+}
+
+.game-load-progress {
+    color: #DD3333;
+}
+
+.game-load-progress::after {
+    content: "%";
+}
+
 .title-content-button {
     background: #F0F0F0;
     opacity: 0.4;
