--- a/css/spni.css
+++ b/css/spni.css
@@ -2700,11 +2700,11 @@ ul.dropdown-menu>li {
     line-height: 3rem;
 }
 
-.group-badge-bar {
+.select-badge-bar {
     position: absolute;
-    width: 36%;
+    width: 33%;
     left: 0;
-    top: 0;
+    top: 1.5%;
 
     display: flex;
     flex-direction: column;
@@ -2712,8 +2712,8 @@ ul.dropdown-menu>li {
     align-items: center;
 }
 
-.group-badge-bar .badge-icon {
-    opacity: 0.75;
+.select-badge-bar .badge-icon {
+    opacity: 0.7;
 
     width: 100%;
     height: auto;
@@ -2724,7 +2724,7 @@ ul.dropdown-menu>li {
     opacity: 0.60;
     width: 25%;
     right: 0;
-    top: 10.5%;
+    top: 18%;
 }
 
 .status-icon:hover {
@@ -2733,9 +2733,19 @@ ul.dropdown-menu>li {
 
 .layer-icon {
     position: absolute;
-    width: 20%;
+    width: 19%;
     right: 0;
     top: 2%;
+    opacity: 80%;
+}
+
+.gender-icon {
+    position: absolute;
+    width: 19%;
+    right: 0;
+    top: 10%;
+    filter: drop-shadow(0.5rem 0.5rem 0.5rem #222);
+    opacity: 80%;
 }
 
 .wrap-text {
