--- a/css/spni.css
+++ b/css/spni.css
@@ -1992,6 +1992,11 @@ ul.dropdown-menu>li {
     position: static;
 }
 
+.badge-sidebar .badge-icon.missing-reqs {
+    opacity: 0.40;
+    filter: grayscale(100%);
+}
+
 .selection-card-footer {
     position: absolute;
     bottom: 0;
