Add clearer indication that you're at the end of an epilogue.

--- a/css/spni.css
+++ b/css/spni.css
@@ -3452,7 +3452,7 @@ ul.dropdown-menu>li {
 #epilogue-buttons.show, #epilogue-buttons.force-show, #epilogue-buttons.debug-active {
     opacity: 1;
 }
-#epilogue-buttons button {
+#epilogue-buttons>div>* {
     display: inline-block;
     padding: 0.3em;
     border: 0 none;
