New style for new characters' cards.

--- a/css/spni.css
+++ b/css/spni.css
@@ -2057,6 +2057,15 @@ ul.dropdown-menu>li {
     transition-duration: 0.5s;
 }
 
+.selection-card[data-highlight=new] {
+  background-image: url("../img/new-corner.svg");
+  background-size: 38%;
+  background-repeat: no-repeat;
+  background-color: rgba(51, 74, 51, 0.65);
+}
+.selection-card[data-highlight="new"]>.badge-sidebar {
+  top: 5%;
+}
 .selection-card[data-highlight="new"]:hover,
 .selection-card[data-highlight="new"]:active {
     background-color: rgba(102, 255, 102, 0.50);
