Colour the alt costume dropdowns, move the ones on the main selection screen into the opponent areas, and move the ones on the group selection screen up so they don't get obscured when there's a suggested background, and also into the table element so they get hidden when you click the hide table button.

--- a/css/spni.css
+++ b/css/spni.css
@@ -2463,7 +2463,7 @@ ul.dropdown-menu>li {
     flex: 1;
 }
 
-#individual-select-screen .opponent-costume-select {
+#individual-select-screen .alt-costume-dropdown {
     flex: 3;
     padding: 0.5% 2%;
     height: auto;
@@ -2782,23 +2782,19 @@ ul.dropdown-menu>li {
     overflow-wrap: anywhere;
 }
 
+.alt-costume-dropdown {
+    background-color: rgb(243, 184, 232);
+    border-color: rgb(158, 48, 175);
+    padding: 0.125em;
+}
+
 .opponent-image-area .alt-costume-dropdown {
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 48%;
     -webkit-transform: translateX(-50%);
     -moz-transform: translateX(-50%);
     transform: translateX(-50%);
-}
-
-#main-select-screen .alt-costume-dropdown {
-    top: 57%;
-}
-
-.alt-costume-dropdown[disabled] {
-    background-color: #eee;
-    color: #606060;
-    cursor: not-allowed;   
 }
 
 /************************************************************
@@ -2954,9 +2950,17 @@ ul.dropdown-menu>li {
     background-color: rgba(40, 40, 40, 0.75);
 }
 
-.opponent-area .name-label {
-    text-align: center;
+#group-select-table .alt-costume-dropdown {
+    position: absolute;
+    width: 22rem;
+    margin: 0 1.5rem;
+    bottom: 38%;
+}
+
+.opponent-area .name-label,
+.opponent-area .alt-costume-dropdown {
     margin-bottom: 0.2rem;
+    width: 100%;
 }
 
 .opponent-card-area {
