CSS adjustments, using flex a little less.

--- a/css/spni.css
+++ b/css/spni.css
@@ -2221,7 +2221,8 @@ ul.dropdown-menu>li {
     flex: 1;
 }
 
-.smooth-button.select-back-btn:active {
+.smooth-button.select-back-btn:active,
+.smooth-button.show-more-button:active {
     padding-left: 0.55em;
     padding-right: 0.45em;
 }
@@ -2358,12 +2359,10 @@ ul.dropdown-menu>li {
 }
 
 .opponent-details-field>* {
-    display: flex;
-    align-items: center;
-
     padding: 0.5% 2%;
 
     flex: 1;
+    text-align: left;
     word-wrap: break-word;
 }
 
@@ -2374,7 +2373,7 @@ ul.dropdown-menu>li {
 }
 
 .opponent-details-field>.opponent-details-value {
-    flex: 3;
+    flex: 2.5;
 }
 
 .left-cap.opponent-details-field>.opponent-details-value {
@@ -2384,22 +2383,20 @@ ul.dropdown-menu>li {
 .opponent-details-name {
     min-height: 17%;
     padding: 2% 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    flex: 2;
-}
-
-.opponent-source {
-    font-size: 1.6rem;
+    display: block;
 }
 
 .opponent-full-name {
     margin-bottom: 0.75rem;
     font-size: 2.1rem;
+    line-height: 1.2em;
+    text-align: center;
+}
+
+.opponent-source {
+    font-size: 1.6rem;
+    line-height: 1.2em;
+    text-align: center;
 }
 
 .opponent-details-name>div {
@@ -2476,9 +2473,9 @@ ul.dropdown-menu>li {
 }
 
 .show-more-button {
-    display: block;
     font-size: 0.7em;
     padding: 0 0.5em;
+    white-space: nowrap;
 }
 
 .show-more-button::after {
