Selection: add Last Updated sort mode and Sponsorship highlighting

--- a/css/spni.css
+++ b/css/spni.css
@@ -2072,7 +2072,9 @@ ul.dropdown-menu>li {
 }
 
 .selection-card[data-highlight="testing"]:hover,
-.selection-card[data-highlight="testing"]:active {
+.selection-card[data-highlight="testing"]:active,
+.selection-card[data-highlight="sponsorship"]:hover,
+.selection-card[data-highlight="sponsorship"]:active {
     background-color: rgba(92, 197, 250, 0.6);
 }
 
