Add Resort Poll button to Warning/Title screen

--- a/css/spni.css
+++ b/css/spni.css
@@ -1604,6 +1604,13 @@ ul.dropdown-menu>li {
     left: 21.0%;
 }
 
+.title-resort-button {
+    left: 25.5%;
+    width: 12.5%;
+    font-size: 140%;
+    padding-top: 0.1em;
+}
+
 .version-button {
     width: 16.5%;
     right: 17%;
