Add separators to the select screen

--- a/css/spni.css
+++ b/css/spni.css
@@ -2099,6 +2099,13 @@ ul.dropdown-menu>li {
     transition-duration: 0.5s;
 }
 
+.card-separator {
+    border-top: 2px solid gray;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 99%;
+}
+
 
 /************************************************************
  * Classes for the sort / filter options row.
